--- a/index.ipynb
+++ b/index.ipynb
@@ -29,12 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bootstrap():\n",
-    "    #Your code here"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bootstrap(sample, n):\n",
+    "    return np.random.choice(sample, size=len(sample), replace=True)"
    ]
   },
   {
@@ -48,14 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def jack1():\n",
+    "def jack1(sample):\n",
     "    \"\"\"This function should take in a list of n observations and return n lists\n",
     "    each with one member (presumably the nth) removed.\"\"\"\n",
-    "    # Your code here"
+    "    samples = []\n",
+    "    for i in range(len(sample)):\n",
+    "        new_sample = sample[:i] + sample[i+1:]\n",
+    "        samples.append(new_sample)\n",
+    "    return samples"
    ]
   },
   {
@@ -84,12 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def comb(a,b):\n",
-    "    # Your code here"
+    "def combT(a,b):\n",
+    "    union = a + b\n",
+    "    new_as = list(itertools.combinations(union, len(a)))\n",
+    "    new_bs = []\n",
+    "    for new_a in new_as:\n",
+    "        u_copy = union.copy()\n",
+    "        for a in new_a:\n",
+    "            u_copy.remove(a)\n",
+    "        new_bs.append(u_copy)\n",
+    "    return list(zip(new_as, new_bs))"
    ]
   },
   {
@@ -127,21 +148,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = []\n",
-    "b = []"
+    "a = [109.6927759 , 120.27296943, 103.54012038, 114.16555857,\n",
+    "       122.93336175, 110.9271756 , 114.77443758, 116.34159338,\n",
+    "       112.66413025, 118.30562665, 132.31196515, 117.99000948]\n",
+    "b = [123.98967482, 141.11969004, 117.00293412, 121.6419775 ,\n",
+    "       123.2703033 , 123.76944385, 105.95249634, 114.87114479,\n",
+    "       130.6878082 , 140.60768727, 121.95433026, 123.11996767,\n",
+    "       129.93260914, 121.01049611]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26 12\n",
+      "9657700.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "from scipy.special import comb\n",
+    "n_items = len(a)+len(b)\n",
+    "unique = len(set(a+b))\n",
+    "sample_size = len(a)\n",
+    "\n",
+    "print(n_items, sample_size)\n",
+    "print(comb(n_items, sample_size))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'itertools' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-222eb100a891>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdiff_mu_a_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcombos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcombT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"There are {} possible sample variations.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcombos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;31m#Initialize numerator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-1586d824cc6c>\u001b[0m in \u001b[0;36mcombT\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcombT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0munion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mnew_as\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcombinations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mnew_bs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mnew_a\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnew_as\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'itertools' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "diff_mu_a_b = np.mean(a) - np.mean(b)\n",
+    "combos = combT(a, b)\n",
+    "print(\"There are {} possible sample variations.\".format(len(combos)))\n",
+    "num = 0 #Initialize numerator\n",
+    "for ai, bi in combos:\n",
+    "    diff_mu_ai_bi = np.mean(ai) - np.mean(bi)\n",
+    "    if diff_mu_ai_bi >= diff_mu_a_b:\n",
+    "        num +=1\n",
+    "p_val = num / len(combos)\n",
+    "print('P-value: {}'.format(p_val))"
    ]
   },
   {
@@ -206,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
